--- a/basic_shapes/basic_shapes.css
+++ b/basic_shapes/basic_shapes.css
@@ -1,4 +1,4 @@
-body {font-family: Arial;}
+body {font-family: Arial; color: white; background-color: black;}
 
 /* Style the tab */
 .tab {
@@ -41,7 +41,7 @@ body {font-family: Arial;}
 .square{
     width: 100px;
     height: 100px;
-    background-color: blueviolet;
+    background-color: darkred;
 }
 
 .square_lines{
@@ -55,14 +55,14 @@ body {font-family: Arial;}
 .rectangle{
     width: 200px;
     height: 100px;
-    background-color: blueviolet;
+    background-color: darkred;
 }
 
 .circle{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: blueviolet;
+    background-color: darkred;
 }
 
 .circle_lines{
@@ -79,5 +79,5 @@ body {font-family: Arial;}
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
-    border-bottom: 100px solid blueviolet;
+    border-bottom: 100px solid darkred;
 }
