--- a/basic_shapes/basic_shapes.css
+++ b/basic_shapes/basic_shapes.css
@@ -47,9 +47,9 @@ body {font-family: Arial; color: white; background-color: black;}
 .square_lines{
     width: 100px;
     height: 100px;
-    background-color: white;
+    background-color: transparent;
     border-style: solid;
-    border-color: black;
+    border-color: white;
 }
 
 .rectangle{
@@ -69,9 +69,9 @@ body {font-family: Arial; color: white; background-color: black;}
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: white;
+    background-color: transparent;
     border-style: solid;
-    border-color: black;
+    border-color: white;
 }
 
 .triangle{
